prevent text wrap in stats

--- a/web/kiri/index.css
+++ b/web/kiri/index.css
@@ -2535,6 +2535,7 @@ details[open] summary::after {
     color: #000;
     flex-direction: column;
     align-items: flex-end;
+    white-space: nowrap;
 }
 #stats hr {
     width: 100%;
